# Linter-C

./: CMakeLists.txt  README.md  compilation.cmd  makefile  test.c.txt
documentation/: Conventions de codage.docx  Document de Livraison.docx  ~$cument de Livraison.docx  ~WRL1625.tmp
log/: linter_C.err
resources/lconfig/: default.lconf  deuxiemeFichier.lconf  troisiemeFichier.lconf
source/: main.c
sources/: VariableAndFunctionRules.c  argument.c  codingConventionRules.c  compiling_error.txt  config.c  directory.c  interface.c  linter.c  logger.c  main.c  rules.c  structure.c
sources/headers/: VariableAndFunctionRules.h  argument.h  codingConventionRules.h  config.h  directory.h  interface.h  linter.h  logger.h  rules.h  structure.h
test/: bidule.c  fichier.lconf  testArrayBracketEOL.c  testCommaSpacing.c  testCommentsHeader.c  testIndent.c  testMaxFileLineNumbers.c  testMaxLineNumbers.c  testNoTrailingSpaces.c  testOperatorsSpacing.c  testPrototypeFunction.c
test/autreDossierTest/testRecursive/: Hello_World.c  fichierExtendu.lconf
